--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+URL: https://github.com/willrmull/friedmantisshrimp
+BugReports: https://github.com/willrmull/friedmantisshrimp/issues
